Added Video Clip of Product

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ font-size: 5vw;
 }
 a.navbar-brand > span{
   font-size: 2vw;
-  position: fixed;
-  
+  position: fixed !important;
+ 
 }
 
 h1, h2, h4, h6, p{
